Fix .git_ignore after the migration.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# IntelliJ Idea metadata
+.idea
+*.iml
+*.ipr
+*.iws
+
 # dependencies
 /node_modules
 /.pnp
@@ -22,3 +28,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
