--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "immutable": "^4.0.0-rc.12",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.1",
     "react-scripts": "^3.0.0",
     "react-virtualized": "^9.21.0",
+    "redux": "^4.0.1",
     "typescript": "^3.2.2"
   },
   "devDependencies": {
+    "@types/react-redux": "^7.0.8",
     "@types/react-router-hash-link": "^1.2.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
