--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.1",
-    "react-scripts": "^3.0.0",
+    "react-scripts": "3.1.1",
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
     "typescript": "^3.2.2"
