--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "watch-css": "npm run build-css && less-watch-compiler src/less src/css",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "eslint src/*.ts src/**/*.tsx"
+    "lint": "eslint src/*.ts src/**/*.tsx",
+    "lint:fix": "eslint --fix src/*.ts src/**/*.tsx"
   },
   "eslintConfig": {
     "extends": "react-app"
