--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "react-scripts": "3.1.1",
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
-    "typescript": "^3.2.2"
+    "typescript": "3.5.3"
   },
   "devDependencies": {
     "@types/react-redux": "^7.0.8",
     "@types/react-router-hash-link": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "2.1.0",
     "@typescript-eslint/parser": "2.1.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "10.0.2",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
@@ -49,8 +49,8 @@
     "watch-css": "npm run build-css && less-watch-compiler src/less src/css",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "eslint src/*.ts src/**/*.tsx",
-    "lint:fix": "eslint --fix src/*.ts src/**/*.tsx"
+    "lint": "eslint \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "lint:fix": "eslint --fix \"src/**/*.ts\" \"src/**/*.tsx\""
   },
   "eslintConfig": {
     "extends": "react-app"
