--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.1.1",
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
+    "redux-saga": "^1.0.5",
     "typescript": "3.5.3"
   },
   "devDependencies": {
