--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^3.6.2",
     "@material-ui/icons": "^3.0.1",
     "@types/jest": "^23.3.10",
+    "@types/lodash": "^4.14.138",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
@@ -14,7 +15,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-virtualized": "^9.18.11",
     "gh-pages": "^2.0.1",
-    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.15",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^7.0.3",
