--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": ">=12.0.0",
+    "npm": ">=6.0.0"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
