--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-virtualized": "^9.18.11",
+    "@types/styled-components": "4.1.8",
     "gh-pages": "^2.0.1",
     "lodash": "^4.17.15",
+    "polished": "^3.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^7.0.3",
@@ -25,6 +27,7 @@
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5",
+    "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
   "devDependencies": {
@@ -32,8 +35,9 @@
     "@types/react-router-hash-link": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "2.1.0",
     "@typescript-eslint/parser": "2.1.0",
-    "enzyme": "^3.10.0",
     "babel-eslint": "10.0.2",
+    "babel-plugin-styled-components": "^1.10.6",
+    "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
     "eslint-config-standard": "^12.0.0",
