--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "homepage": "https://devstronomy.com",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.6.2",
-    "@material-ui/icons": "^3.0.1",
+    "@material-ui/core": "4.4.3",
+    "@material-ui/icons": "4.4.3",
     "@types/jest": "^23.3.10",
     "@types/lodash": "^4.14.138",
     "@types/node": "^10.12.18",
