--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "3.5.3"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.3",
     "@types/react-redux": "^7.0.8",
     "@types/react-router-hash-link": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "2.1.0",
