--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "1.18.2"
+    "prettier": "1.18.2",
+    "spacekit": "https://github.com/typpo/spacekit"
   },
   "scripts": {
     "start": "react-scripts start",
