--- a/package.json
+++ b/package.json
@@ -4,31 +4,31 @@
   "homepage": "https://devstronomy.com",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.4.3",
-    "@material-ui/icons": "4.4.3",
-    "@types/jest": "^23.3.10",
-    "@types/lodash": "^4.14.138",
-    "@types/node": "^10.12.18",
-    "@types/react": "^16.7.17",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-router": "^4.4.3",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-virtualized": "^9.18.11",
-    "@types/styled-components": "4.1.8",
-    "gh-pages": "^2.0.1",
-    "lodash": "^4.17.15",
-    "polished": "^3.4.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.1.2",
-    "react-router-hash-link": "^1.2.2",
-    "react-scripts": "3.2.0",
-    "react-virtualized": "^9.21.0",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.5",
-    "styled-components": "^4.3.2",
-    "typescript": "3.5.3"
+    "@material-ui/core": "4.8.3",
+    "@material-ui/icons": "4.5.1",
+    "@types/jest": "23.3.13",
+    "@types/lodash": "4.14.149",
+    "@types/node": "13.1.5",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
+    "@types/react-router": "4.4.5",
+    "@types/react-router-dom": "4.3.5",
+    "@types/react-virtualized": "9.21.7",
+    "@types/styled-components": "4.4.2",
+    "gh-pages": "2.2.0",
+    "lodash": "4.17.15",
+    "polished": "3.4.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-redux": "7.1.3",
+    "react-router-dom": "5.1.2",
+    "react-router-hash-link": "1.2.2",
+    "react-scripts": "3.3.0",
+    "react-virtualized": "9.21.2",
+    "redux": "4.0.5",
+    "redux-saga": "1.1.3",
+    "styled-components": "4.4.1",
+    "typescript": "3.7.4"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.3",
@@ -57,7 +57,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "lint": "eslint \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "lint:fix": "eslint --fix \"src/**/*.ts\" \"src/**/*.tsx\""
+    "lint:fix": "eslint --fix \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "postinstall": "rm -rf node_modules/@types/react-native"
   },
   "jest": {
     "snapshotSerializers": [
