--- a/package.json
+++ b/package.json
@@ -20,50 +20,50 @@
   ],
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.8.3",
-    "@material-ui/icons": "4.5.1",
-    "@types/jest": "23.3.13",
-    "@types/lodash": "4.14.149",
+    "@material-ui/core": "4.9.12",
+    "@material-ui/icons": "4.9.1",
+    "@types/jest": "24.9.1",
+    "@types/lodash": "4.14.150",
     "@types/node": "13.1.5",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
+    "@types/react": "16.9.34",
+    "@types/react-dom": "16.9.7",
     "@types/react-router": "4.4.5",
     "@types/react-router-dom": "4.3.5",
-    "@types/react-virtualized": "9.21.7",
-    "@types/styled-components": "4.4.2",
+    "@types/react-virtualized": "9.21.9",
+    "@types/styled-components": "4.4.3",
     "gh-pages": "2.2.0",
     "lodash": "4.17.15",
-    "polished": "3.4.2",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-redux": "7.1.3",
+    "polished": "3.6.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
     "react-router-hash-link": "1.2.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.1",
     "react-virtualized": "9.21.2",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
     "styled-components": "4.4.1",
-    "typescript": "3.7.4"
+    "typescript": "3.8.3"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.3",
-    "@types/react-redux": "^7.0.8",
+    "@types/enzyme": "3.10.5",
+    "@types/react-redux": "7.1.7",
     "@types/react-router-hash-link": "^1.2.0",
-    "@typescript-eslint/eslint-plugin": "2.1.0",
-    "@typescript-eslint/parser": "2.1.0",
-    "babel-eslint": "10.0.3",
-    "babel-plugin-styled-components": "^1.10.6",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.4.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "prettier": "1.18.2"
+    "@typescript-eslint/eslint-plugin": "2.30.0",
+    "@typescript-eslint/parser": "2.30.0",
+    "babel-eslint": "10.1.0",
+    "babel-plugin-styled-components": "1.10.7",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "enzyme-to-json": "3.4.4",
+    "eslint-config-standard": "12.0.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-standard": "4.0.1",
+    "prettier": "2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
