--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   ],
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "@material-ui/core": "4.9.12",
     "@material-ui/icons": "4.9.1",
     "@types/jest": "24.9.1",
@@ -30,7 +33,7 @@
     "@types/react-router": "4.4.5",
     "@types/react-router-dom": "4.3.5",
     "@types/react-virtualized": "9.21.9",
-    "@types/styled-components": "4.4.3",
+    "@types/styled-components": "4.4.2",
     "gh-pages": "2.2.0",
     "lodash": "4.17.15",
     "polished": "3.6.0",
@@ -47,23 +50,21 @@
     "typescript": "3.8.3"
   },
   "devDependencies": {
-    "@types/enzyme": "3.10.5",
     "@types/react-redux": "7.1.7",
-    "@types/react-router-hash-link": "^1.2.0",
+    "@types/react-router-hash-link": "1.2.1",
     "@typescript-eslint/eslint-plugin": "2.30.0",
     "@typescript-eslint/parser": "2.30.0",
     "babel-eslint": "10.1.0",
     "babel-plugin-styled-components": "1.10.7",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2",
-    "enzyme-to-json": "3.4.4",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-node": "8.0.1",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-standard": "4.0.1",
-    "prettier": "2.0.5"
+    "import-sort-style-module": "6.0.0",
+    "prettier": "2.0.5",
+    "prettier-plugin-import-sort": "0.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -75,11 +76,6 @@
     "lint": "eslint \"src/**/*.ts\" \"src/**/*.tsx\"",
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"src/**/*.tsx\"",
     "postinstall": "rm -rf node_modules/@types/react-native"
-  },
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
   },
   "setupFiles": [
     "./src/setupTests.js"
