--- a/package.json
+++ b/package.json
@@ -20,51 +20,51 @@
   ],
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.9.12",
+    "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "24.9.1",
-    "@types/lodash": "4.14.150",
-    "@types/node": "13.1.5",
-    "@types/react": "16.9.34",
-    "@types/react-dom": "16.9.7",
-    "@types/react-router": "4.4.5",
-    "@types/react-router-dom": "4.3.5",
-    "@types/react-virtualized": "9.21.9",
-    "@types/styled-components": "4.4.2",
-    "gh-pages": "2.2.0",
-    "lodash": "4.17.19",
-    "polished": "3.6.0",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.0.2",
+    "@testing-library/user-event": "12.1.4",
+    "@types/jest": "26.0.13",
+    "@types/lodash": "4.14.161",
+    "@types/node": "14.6.4",
+    "@types/react": "16.9.49",
+    "@types/react-dom": "16.9.8",
+    "@types/react-router": "5.1.8",
+    "@types/react-router-dom": "5.1.5",
+    "@types/react-virtualized": "9.21.10",
+    "@types/styled-components": "5.1.3",
+    "gh-pages": "3.1.0",
+    "lodash": "4.17.20",
+    "polished": "3.6.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-ga": "3.1.2",
-    "react-redux": "7.2.0",
-    "react-router-dom": "5.1.2",
-    "react-router-hash-link": "1.2.2",
-    "react-scripts": "3.4.1",
-    "react-virtualized": "9.21.2",
+    "react-redux": "7.2.1",
+    "react-router-dom": "5.2.0",
+    "react-router-hash-link": "2.0.0",
+    "react-scripts": "3.4.3",
+    "react-virtualized": "9.22.2",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
-    "styled-components": "4.4.1",
-    "typescript": "3.8.3"
+    "styled-components": "5.2.0",
+    "typescript": "4.0.2"
   },
   "devDependencies": {
-    "@types/react-redux": "7.1.7",
+    "@types/react-redux": "7.1.9",
     "@types/react-router-hash-link": "1.2.1",
-    "@typescript-eslint/eslint-plugin": "2.30.0",
-    "@typescript-eslint/parser": "2.30.0",
+    "@typescript-eslint/eslint-plugin": "3.10.1",
+    "@typescript-eslint/parser": "3.10.1",
     "babel-eslint": "10.1.0",
-    "babel-plugin-styled-components": "1.10.7",
-    "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-node": "8.0.1",
+    "babel-plugin-styled-components": "1.11.1",
+    "eslint-config-standard": "14.1.1",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react": "7.20.6",
     "eslint-plugin-standard": "4.0.1",
     "import-sort-style-module": "6.0.0",
-    "prettier": "2.0.5",
+    "prettier": "2.1.1",
     "prettier-plugin-import-sort": "0.0.4"
   },
   "scripts": {
