--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
+  "private": true,
   "name": "devstronomy-frontend",
   "description": "This project contains the code-base for the frontend part of Devstronomy project.",
-  "version": "0.1.1",
+  "license": "MIT",
   "homepage": "https://devstronomy.com",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/devstronomy/frontend.git"
   },
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/devstronomy/frontend/issues"
   },
-  "keywords": [
-    "astronomy",
-    "solar-system",
-    "planets",
-    "planetary-satellites",
-    "apollo"
-  ],
-  "private": true,
+  "version": "0.1.1",
+  "scripts": {
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject",
+    "postinstall": "rm -rf node_modules/@types/react-native",
+    "lint": "eslint \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "lint:fix": "eslint --fix \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "prettier": "prettier-package-json --write ./package.json"
+  },
   "dependencies": {
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
@@ -65,25 +70,16 @@
     "eslint-plugin-standard": "4.0.2",
     "import-sort-style-module": "6.0.0",
     "prettier": "2.1.2",
+    "prettier-package-json": "2.1.3",
     "prettier-plugin-import-sort": "0.0.6"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "lint": "eslint \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "lint:fix": "eslint --fix \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "postinstall": "rm -rf node_modules/@types/react-native"
-  },
-  "setupFiles": [
-    "./src/setupTests.js"
+  "keywords": [
+    "apollo",
+    "astronomy",
+    "planetary-satellites",
+    "planets",
+    "solar-system"
   ],
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "engines": {
     "node": ">=12.0.0",
     "npm": ">=6.0.0"
@@ -93,5 +89,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
+  ],
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "setupFiles": [
+    "./src/setupTests.js"
   ]
 }
