--- a/package.json
+++ b/package.json
@@ -25,52 +25,52 @@
     "prettier": "prettier-package-json --write ./package.json"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.2",
+    "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.3",
-    "@testing-library/user-event": "12.6.0",
-    "@types/jest": "26.0.20",
-    "@types/lodash": "4.14.167",
-    "@types/node": "14.14.21",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-router": "5.1.11",
-    "@types/react-router-dom": "5.1.7",
-    "@types/react-virtualized": "9.21.10",
-    "@types/styled-components": "5.1.7",
-    "gh-pages": "3.1.0",
-    "lodash": "4.17.20",
-    "polished": "4.0.5",
+    "lodash": "4.17.21",
+    "polished": "4.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-ga": "3.3.0",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
-    "react-router-hash-link": "2.3.1",
-    "react-scripts": "4.0.1",
+    "react-router-hash-link": "2.4.0",
+    "react-scripts": "4.0.3",
     "react-virtualized": "9.22.3",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
-    "styled-components": "5.2.1",
-    "typescript": "4.1.3"
+    "styled-components": "5.2.1"
   },
   "devDependencies": {
-    "@types/react-redux": "7.1.15",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.5",
+    "@testing-library/user-event": "12.8.3",
+    "@types/jest": "26.0.20",
+    "@types/lodash": "4.14.168",
+    "@types/node": "14.14.33",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.2",
+    "@types/react-redux": "7.1.16",
+    "@types/react-router": "5.1.12",
+    "@types/react-router-dom": "5.1.7",
     "@types/react-router-hash-link": "1.2.1",
-    "@typescript-eslint/eslint-plugin": "4.13.0",
-    "@typescript-eslint/parser": "4.13.0",
+    "@types/react-virtualized": "9.21.11",
+    "@types/styled-components": "5.1.8",
+    "@typescript-eslint/eslint-plugin": "4.17.0",
+    "@typescript-eslint/parser": "4.17.0",
     "babel-eslint": "10.1.0",
     "babel-plugin-styled-components": "1.12.0",
     "eslint-config-standard": "16.0.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-standard": "4.1.0",
+    "gh-pages": "3.1.0",
     "import-sort-style-module": "6.0.0",
     "prettier": "2.2.1",
     "prettier-package-json": "2.1.3",
+    "typescript": "4.1.5",
     "prettier-plugin-import-sort": "0.0.6"
   },
   "keywords": [
