Eject Create React App
1) not to be restricted
2) no need to wait for the update of some libs (or waiting for CRA update)
3) to learn more about how the stuff works
4) unlimited customization :)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,23 @@
 {
   "compilerOptions": {
     "module": "esnext",
-    "target": "es5",
-    "lib": [
-      "es6",
-      "dom"
-    ],
+    "target": "es6",
     "sourceMap": true,
-    "allowJs": true,
     "jsx": "react-jsx",
     "strict": true,
     "moduleResolution": "node",
-    "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-    "importHelpers": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "skipLibCheck": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
     "experimentalDecorators": true,
     "noFallthroughCasesInSwitch": true
   },
-  "exclude": [
-    "**/build/"
-  ],
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
