--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "version": "0.1.1",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "webpack --config webpack.prod.js --progress",
+    "clean": "rm -rf dist",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject",
     "postinstall": "rm -rf node_modules/@types/react-native",
     "lint": "eslint \"src/**/*.ts\" \"src/**/*.tsx\"",
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
+    "start": "webpack serve --open --config webpack.dev.js",
+    "test": "jest",
     "prettier": "prettier-package-json --write ./package.json"
   },
   "dependencies": {
@@ -34,7 +34,6 @@
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "2.4.0",
-    "react-scripts": "4.0.3",
     "react-virtualized": "9.22.3",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
@@ -55,10 +54,15 @@
     "@types/react-router-hash-link": "1.2.1",
     "@types/react-virtualized": "9.21.11",
     "@types/styled-components": "5.1.8",
+    "@types/webpack": "4.41.26",
+    "@types/webpack-dev-server": "3.11.2",
     "@typescript-eslint/eslint-plugin": "4.17.0",
     "@typescript-eslint/parser": "4.17.0",
     "babel-eslint": "10.1.0",
     "babel-plugin-styled-components": "1.12.0",
+    "copy-webpack-plugin": "8.0.0",
+    "css-loader": "5.1.3",
+    "eslint": "7.22.0",
     "eslint-config-standard": "16.0.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
@@ -66,11 +70,21 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-standard": "4.1.0",
     "gh-pages": "3.1.0",
+    "html-webpack-plugin": "5.3.1",
     "import-sort-style-module": "6.0.0",
+    "jest": "26.6.3",
+    "mini-css-extract-plugin": "1.3.9",
     "prettier": "2.2.1",
     "prettier-package-json": "2.1.3",
+    "prettier-plugin-import-sort": "0.0.6",
+    "style-loader": "2.0.0",
+    "ts-jest": "26.5.4",
+    "ts-loader": "8.0.18",
     "typescript": "4.1.5",
-    "prettier-plugin-import-sort": "0.0.6"
+    "webpack": "5.25.0",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2",
+    "webpack-merge": "5.7.3"
   },
   "keywords": [
     "apollo",
