--- a/package.json
+++ b/package.json
@@ -65,9 +65,11 @@
     "eslint": "7.22.0",
     "eslint-config-standard": "16.0.2",
     "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest-dom": "3.6.5",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-standard": "4.1.0",
     "gh-pages": "3.1.0",
     "html-webpack-plugin": "5.3.1",
@@ -103,9 +105,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "setupFiles": [
     "./src/setupTests.js"
   ]
