--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "version": "0.1.1",
   "scripts": {
     "build": "webpack --config webpack.prod.js --progress",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "postinstall": "rm -rf node_modules/@types/react-native",
+    "postinstall": "rimraf node_modules/@types/react-native",
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
     "lint:fix": "eslint --fix 'src/**/*.ts' 'src/**/*.tsx'",
     "start": "webpack serve --open --config webpack.dev.js",
@@ -79,6 +79,7 @@
     "prettier": "2.2.1",
     "prettier-package-json": "2.1.3",
     "prettier-plugin-import-sort": "0.0.6",
+    "rimraf": "3.0.2",
     "style-loader": "2.0.0",
     "ts-jest": "26.5.4",
     "ts-loader": "8.0.18",
