--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "html-webpack-plugin": "5.3.1",
     "import-sort-style-module": "6.0.0",
     "jest": "26.6.3",
+    "json5-loader": "4.0.1",
     "mini-css-extract-plugin": "1.4.0",
     "prettier": "2.2.1",
     "prettier-package-json": "2.1.3",
