Tag existing abbreviation with 'apollo' tag.

--- a/data/apollo-abbr.json5
+++ b/data/apollo-abbr.json5
@@ -1,66 +1,69 @@
 [
-  // abbreviation, short description, long description
-  ["39A", "One of the two pads at the Launch Complex 39.", ""],
-  ["39B", "One of the two pads at the Launch Complex 39.", ""],
-  ["ALSEP", "Apollo Lunar Surface Experiments Package", ""],
-  ["AS-204", "Saturn IB launch vehicle that is associated with Apollo 1 and Apollo 5 missions", ""],
-  ["BPC", "Boost Protective Cover", ""],
-  ["CDR", "Commander", ""],
-  ["CM", "Command Module", ""],
-  ["CMP", "Command Module Pilot", ""],
-  ["CSM", "CM + SM (Command Module + Service Module)", ""],
-  ["DAP", "Digital AutoPilot", ""],
-  ["EASEP", "Early Apollo Scientific Experiments Package", ""],
+  // abbreviation, short description, long description, tags
+  ['39A', 'One of the two pads at the Launch Complex 39.', '', ['apollo']],
+  ['39B', 'One of the two pads at the Launch Complex 39.', '', ['apollo']],
+  ['ALSEP', 'Apollo Lunar Surface Experiments Package', '', ['apollo']],
+  ['AS-204', 'Saturn IB launch vehicle that is associated with Apollo 1 and Apollo 5 missions', '', ['apollo']],
+  ['BPC', 'Boost Protective Cover', '', ['apollo']],
+  ['CDR', 'Commander', '', ['apollo']],
+  ['CM', 'Command Module', '', ['apollo']],
+  ['CMP', 'Command Module Pilot', '', ['apollo']],
+  ['CSM', 'CM + SM (Command Module + Service Module)', '', ['apollo']],
+  ['DAP', 'Digital AutoPilot', '', ['apollo']],
+  ['EASEP', 'Early Apollo Scientific Experiments Package', '', ['apollo']],
   [
-    "EOR",
-    "Earth Orbit Rendezvous.",
-    "One of the three potential methods of achieving a lunar landing and safe return."
+    'EOR',
+    'Earth Orbit Rendezvous.',
+    'One of the three potential methods of achieving a lunar landing and safe return.',
+    ['apollo'],
   ],
   [
-    "F-1",
-    "Liquid-propellant rocket engine of S-IC",
-    "Five F-1 used in the S-IC. RP-1 as the fuel. LOX as the oxidizer.",
-    ""
+    'F-1',
+    'Liquid-propellant rocket engine of S-IC',
+    'Five F-1 used in the S-IC. RP-1 as the fuel. LOX as the oxidizer.',
+    ['apollo'],
   ],
-  ["F-1A", "Version of F-1 which was never brought into service", ""],
-  ["ICBM", "InterContinental Ballistic Missile", ""],
+  ['F-1A', 'Version of F-1 which was never brought into service', '', ['apollo']],
+  ['ICBM', 'InterContinental Ballistic Missile', '', ['apollo']],
   [
-    "J-2",
-    "Liquid-fuel cryogenic rocket engine used for the second and third stages.",
-    "J-2 burned cryogenic LH2 and LOX propellants."
+    'J-2',
+    'Liquid-fuel cryogenic rocket engine used for the second and third stages.',
+    'J-2 burned cryogenic LH2 and LOX propellants.',
+    ['apollo'],
   ],
-  ["KSC", "Kennedy Space Center", ""],
-  ["LEM", "Lunar Excursion Module", "Initial name for LM."],
-  ["LES", "Launch Escape System", ""],
-  ["LET", "Launch Escape Tower", ""],
-  ["LH2", "Liquid hydrogen", ""],
-  ["LM", "Lunar Module", ""],
-  ["LMP", "Lunar Module Pilot", ""],
-  ["LOI", "Lunar Orbit Insertion", ""],
+  ['KSC', 'Kennedy Space Center', '', ['apollo']],
+  ['LEM', 'Lunar Excursion Module', 'Initial name for LM.', ['apollo']],
+  ['LES', 'Launch Escape System', '', ['apollo']],
+  ['LET', 'Launch Escape Tower', '', ['apollo']],
+  ['LH2', 'Liquid hydrogen', '', ['apollo']],
+  ['LM', 'Lunar Module', '', ['apollo']],
+  ['LMP', 'Lunar Module Pilot', '', ['apollo']],
+  ['LOI', 'Lunar Orbit Insertion', '', ['apollo']],
   [
-    "LOR",
-    "Lunar Orbit Rendezvous.",
-    "One of the three potential methods of achieving a lunar landing and safe return. Fly into lunar orbit and send down a specialized lander while the mothership remained in space, then rendezvous upon lifting off from the Moon. LOR was selected as the final one."
+    'LOR',
+    'Lunar Orbit Rendezvous.',
+    'One of the three potential methods of achieving a lunar landing and safe return. Fly into lunar orbit and send down a specialized lander while the mothership remained in space, then rendezvous upon lifting off from the Moon. LOR was selected as the final one.',
+    ['apollo'],
   ],
-  ["LOX", "Liquid OXygen", "Very cold liquid oxygen. A cryogenic propellant."],
-  ["LRV", "Lunar Roving Vehicle", ""],
-  ["LUT", "Large Umbilical Tower", ""],
-  ["MCC", "Mission Control Center", ""],
-  ["MLP", "Mobile Launcher Platform", ""],
-  ["MOCR", "Mission Operations Control Room", ""],
-  ["MSS", "Mobile Service Structure", ""],
-  ["NASA", "National Aeronautics and Space Administration", ""],
-  ["RCS", "Reaction Control System", ""],
-  ["RP-1", "Rocket Propellant-1, Refined Petroleum-1, refined kerosene fuel", ""],
-  ["S-IC", "First stage of Saturn V (pronounced s-one-c)", ""],
-  ["S-II", "Second stage of Saturn V (pronounced s-two)", "Had five non-restartable J-2 engines."],
-  ["S-IVB", "Third stage of Saturn V (pronounced s-four-b)", "Had single restartable J-2 engine."],
-  ["Saturn IB", "Launch vehicle, smaller predecessor of Saturn V", ""],
-  ["SIM", "Scientific Instrument Module", ""],
-  ["SM", "Service Module", ""],
-  ["SPS", "Service Propulsion System", ""],
-  ["TLI", "TransLunar Injection", ""],
-  ["USAF", "US Air Force", ""],
-  ["VAB", "Vehicle Assembly Building", ""],
-  ["VfR", "Verein für Raumschiffahrt", "(Society for Space Travel)"]
+  ['LOX', 'Liquid OXygen', 'Very cold liquid oxygen. A cryogenic propellant.', ['apollo']],
+  ['LRV', 'Lunar Roving Vehicle', '', ['apollo']],
+  ['LUT', 'Large Umbilical Tower', '', ['apollo']],
+  ['MCC', 'Mission Control Center', '', ['apollo']],
+  ['MLP', 'Mobile Launcher Platform', '', ['apollo']],
+  ['MOCR', 'Mission Operations Control Room', '', ['apollo']],
+  ['MSS', 'Mobile Service Structure', '', ['apollo']],
+  ['NASA', 'National Aeronautics and Space Administration', '', ['apollo']],
+  ['RCS', 'Reaction Control System', '', ['apollo']],
+  ['RP-1', 'Rocket Propellant-1, Refined Petroleum-1, refined kerosene fuel', '', ['apollo']],
+  ['S-IC', 'First stage of Saturn V (pronounced s-one-c)', '', ['apollo']],
+  ['S-II', 'Second stage of Saturn V (pronounced s-two)', 'Had five non-restartable J-2 engines.', ['apollo']],
+  ['S-IVB', 'Third stage of Saturn V (pronounced s-four-b)', 'Had single restartable J-2 engine.', ['apollo']],
+  ['Saturn IB', 'Launch vehicle, smaller predecessor of Saturn V', '', ['apollo']],
+  ['SIM', 'Scientific Instrument Module', '', ['apollo']],
+  ['SM', 'Service Module', '', ['apollo']],
+  ['SPS', 'Service Propulsion System', '', ['apollo']],
+  ['TLI', 'TransLunar Injection', '', ['apollo']],
+  ['USAF', 'US Air Force', '', ['apollo']],
+  ['VAB', 'Vehicle Assembly Building', '', ['apollo']],
+  ['VfR', 'Verein für Raumschiffahrt', '(Society for Space Travel)', ['apollo']],
 ]
