--- a/data/rocket-abbr.json5
+++ b/data/rocket-abbr.json5
@@ -3,13 +3,19 @@
   ['39A', 'One of the two pads at the Launch Complex 39.', '', ['apollo']],
   ['39B', 'One of the two pads at the Launch Complex 39.', '', ['apollo']],
   ['ALSEP', 'Apollo Lunar Surface Experiments Package', '', ['apollo']],
+  ['AOA', 'abort Once Around', '', []],
+  ['APS', 'Ascent Propulsion System', '', []],
+  ['ARISS', 'The Amateur Radio on the International Space Station', '', []],
   ['AS-204', 'Saturn IB launch vehicle that is associated with Apollo 1 and Apollo 5 missions', '', ['apollo']],
+  ['ATO', 'abort To Orbit', '', []],
   ['BPC', 'Boost Protective Cover', '', ['apollo']],
   ['CDR', 'Commander', '', ['apollo']],
   ['CM', 'Command Module', '', ['apollo']],
   ['CMP', 'Command Module Pilot', '', ['apollo']],
+  ['COAS', 'Crew Operated Alignment Sight', '', []],
   ['CSM', 'CM + SM (Command Module + Service Module)', '', ['apollo']],
   ['DAP', 'Digital AutoPilot', '', ['apollo']],
+  ['DSN', "NASA's Deep Space Network", '', []],
   ['EASEP', 'Early Apollo Scientific Experiments Package', '', ['apollo']],
   [
     'EOR',
@@ -17,6 +23,11 @@
     'One of the three potential methods of achieving a lunar landing and safe return.',
     ['apollo'],
   ],
+  ['ESA', 'European Space Agency', '', []],
+  ['ESOC', "ESA's Space Operations Centre", '', []],
+  ['ESTEC', 'European Space Research and Technology Centre', '', []],
+  ['EUMETSAT', 'European Organisation for the Exploitation of Meteorological Satellites', '', []],
+  ['EVA', 'ExtraVehicular Activity', '', []],
   [
     'F-1',
     'Liquid-propellant rocket engine of S-IC',
@@ -24,7 +35,15 @@
     ['apollo'],
   ],
   ['F-1A', 'Version of F-1 which was never brought into service', '', ['apollo']],
+  ['G-LOC', 'G-induced Loss Of Consciousness', '', []],
+  ['GEO', 'Geosynchronous Equatorial Orbit', '', []],
+  ['GNSS', 'Global Navigation Satellite Systems', '', []],
+  ['GPS', 'Global Positioning System', '', []],
+  ['GSO', 'GeoSynchronous Orbit', '', []],
+  ['HRG', 'Hemispherical Resonator Gyro', '', []],
+  ['HTP', 'High Test Peroxide', 'hydrogen peroxide monopropellant', '', []],
   ['ICBM', 'InterContinental Ballistic Missile', '', ['apollo']],
+  ['ITU', 'International Telecommunication Union', '', []],
   [
     'J-2',
     'Liquid-fuel cryogenic rocket engine used for the second and third stages.',
@@ -33,36 +52,61 @@
   ],
   ['KSC', 'Kennedy Space Center', '', ['apollo']],
   ['LEM', 'Lunar Excursion Module', 'Initial name for LM.', ['apollo']],
+  ['LEO', 'Low Earth Orbit', '', []],
+  ['LEOP', 'Launch and Early Orbit Phase', '', []],
   ['LES', 'Launch Escape System', '', ['apollo']],
   ['LET', 'Launch Escape Tower', '', ['apollo']],
   ['LH2', 'Liquid hydrogen', '', ['apollo']],
   ['LM', 'Lunar Module', '', ['apollo']],
+  ['LMAE', 'Lunar Module Ascent Engine', '', []],
   ['LMP', 'Lunar Module Pilot', '', ['apollo']],
   ['LOI', 'Lunar Orbit Insertion', '', ['apollo']],
   [
     'LOR',
     'Lunar Orbit Rendezvous.',
-    'One of the three potential methods of achieving a lunar landing and safe return. Fly into lunar orbit and send down a specialized lander while the mothership remained in space, then rendezvous upon lifting off from the Moon. LOR was selected as the final one.',
+    'One of the three potential methods of achieving a lunar landing and safe return. Fly into lunar orbit and send \
+down a specialized lander while the mothership remained in space, then rendezvous upon lifting off from the \
+Moon. LOR was selected as the final one.',
     ['apollo'],
   ],
   ['LOX', 'Liquid OXygen', 'Very cold liquid oxygen. A cryogenic propellant.', ['apollo']],
   ['LRV', 'Lunar Roving Vehicle', '', ['apollo']],
+  ['LSMS', 'Lightweight Surface Manipulation System', '', []],
   ['LUT', 'Large Umbilical Tower', '', ['apollo']],
+  ['MAPS', 'Mars Ascent Propulsion System', '', []],
   ['MCC', 'Mission Control Center', '', ['apollo']],
+  ['MCC', 'Mission Control Centre', '', []],
+  ['MECO', 'Main Engine Cutoff', '', []],
   ['MLP', 'Mobile Launcher Platform', '', ['apollo']],
   ['MOCR', 'Mission Operations Control Room', '', ['apollo']],
+  ['MSR', 'Mars Sample Return', '', []],
   ['MSS', 'Mobile Service Structure', '', ['apollo']],
   ['NASA', 'National Aeronautics and Space Administration', '', ['apollo']],
+  ['NASA', 'National Aeronautics and Space Administration', '', []],
+  ['NOAA', 'The US National Oceanic and Atmospheric Administration', '', []],
+  [
+    'radar',
+    'RAdio Detection And Ranging',
+    'The word "radar" is taken from the initial letters of the phrase "RAdio Detection And Ranging"',
+    [],
+  ],
   ['RCS', 'Reaction Control System', '', ['apollo']],
+  ['RLG', 'Ring Laser Gyroscope', '', []],
   ['RP-1', 'Rocket Propellant-1, Refined Petroleum-1, refined kerosene fuel', '', ['apollo']],
+  ['RTLS', 'Return To Launch Site', '', []],
   ['S-IC', 'First stage of Saturn V (pronounced s-one-c)', '', ['apollo']],
   ['S-II', 'Second stage of Saturn V (pronounced s-two)', 'Had five non-restartable J-2 engines.', ['apollo']],
   ['S-IVB', 'Third stage of Saturn V (pronounced s-four-b)', 'Had single restartable J-2 engine.', ['apollo']],
   ['Saturn IB', 'Launch vehicle, smaller predecessor of Saturn V', '', ['apollo']],
   ['SIM', 'Scientific Instrument Module', '', ['apollo']],
   ['SM', 'Service Module', '', ['apollo']],
+  ['SNR', 'Signal to Noise Ratio', '', []],
+  ['SOHO', 'Solar and Heliospheric Observatory', '', []],
   ['SPS', 'Service Propulsion System', '', ['apollo']],
+  ['TAL', 'Transatlantic Abort Landing', '', []],
+  ['TDRS', "NASA',s Tracking and Data Relay Satellite System", '', []],
   ['TLI', 'TransLunar Injection', '', ['apollo']],
+  ['TT&C', 'Tracking, Telemetry and Command', '', []],
   ['USAF', 'US Air Force', '', ['apollo']],
   ['VAB', 'Vehicle Assembly Building', '', ['apollo']],
   ['VfR', 'Verein für Raumschiffahrt', '(Society for Space Travel)', ['apollo']],
