Redundant abbr; one typo

--- a/data/rocket-abbr.json5
+++ b/data/rocket-abbr.json5
@@ -81,7 +81,6 @@ Moon. LOR was selected as the final one.',
   ['MOCR', 'Mission Operations Control Room', '', ['apollo']],
   ['MSR', 'Mars Sample Return', '', []],
   ['MSS', 'Mobile Service Structure', '', ['apollo']],
-  ['NASA', 'National Aeronautics and Space Administration', '', ['apollo']],
   ['NASA', 'National Aeronautics and Space Administration', '', []],
   ['NOAA', 'The US National Oceanic and Atmospheric Administration', '', []],
   [
@@ -104,7 +103,7 @@ Moon. LOR was selected as the final one.',
   ['SOHO', 'Solar and Heliospheric Observatory', '', []],
   ['SPS', 'Service Propulsion System', '', ['apollo']],
   ['TAL', 'Transatlantic Abort Landing', '', []],
-  ['TDRS', "NASA',s Tracking and Data Relay Satellite System", '', []],
+  ['TDRS', "NASA's Tracking and Data Relay Satellite System", '', []],
   ['TLI', 'TransLunar Injection', '', ['apollo']],
   ['TT&C', 'Tracking, Telemetry and Command', '', []],
   ['USAF', 'US Air Force', '', ['apollo']],
