New abbreviations added.

--- a/data/rocket-abbr.json5
+++ b/data/rocket-abbr.json5
@@ -1,9 +1,10 @@
+// Entries shape: ['abbreviation', 'short description', 'long description', [tags]]
 [
-  // abbreviation, short description, long description, tags
   ['39A', 'One of the two pads at the Launch Complex 39.', '', ['apollo']],
   ['39B', 'One of the two pads at the Launch Complex 39.', '', ['apollo']],
+  ['ACES', 'Advanced Crew Escape Suit', '', []],
   ['ALSEP', 'Apollo Lunar Surface Experiments Package', '', ['apollo']],
-  ['AOA', 'abort Once Around', '', []],
+  ['AOA', 'Abort Once Around', '', []],
   ['APS', 'Ascent Propulsion System', '', []],
   ['ARISS', 'The Amateur Radio on the International Space Station', '', []],
   ['AS-204', 'Saturn IB launch vehicle that is associated with Apollo 1 and Apollo 5 missions', '', ['apollo']],
@@ -11,12 +12,14 @@
   ['BPC', 'Boost Protective Cover', '', ['apollo']],
   ['CDR', 'Commander', '', ['apollo']],
   ['CM', 'Command Module', '', ['apollo']],
+  ['CMEs', 'Coronal Mass Ejections', '', []],
   ['CMP', 'Command Module Pilot', '', ['apollo']],
   ['COAS', 'Crew Operated Alignment Sight', '', []],
   ['CSM', 'CM + SM (Command Module + Service Module)', '', ['apollo']],
   ['DAP', 'Digital AutoPilot', '', ['apollo']],
   ['DSN', "NASA's Deep Space Network", '', []],
   ['EASEP', 'Early Apollo Scientific Experiments Package', '', ['apollo']],
+  ['EMU', 'Extravehicular Mobility Unit', '', []],
   [
     'EOR',
     'Earth Orbit Rendezvous.',
@@ -35,14 +38,22 @@
     ['apollo'],
   ],
   ['F-1A', 'Version of F-1 which was never brought into service', '', ['apollo']],
+  ['FGAN', "Germany's Research Establishment for Applied Science", '', []],
   ['G-LOC', 'G-induced Loss Of Consciousness', '', []],
+  ['GCRs', 'Galactic cosmic Rays', '', []],
   ['GEO', 'Geosynchronous Equatorial Orbit', '', []],
+  ['GEODSS', 'Ground-based Electro-Optical Deep Space Surveillance', '', []],
   ['GNSS', 'Global Navigation Satellite Systems', '', []],
   ['GPS', 'Global Positioning System', '', []],
+  ['GRAVES', 'Grande Reseau Adapte a la Veille Spatial or Radar System Adapted to Space', 'GRAVES radar system', []],
   ['GSO', 'GeoSynchronous Orbit', '', []],
   ['HRG', 'Hemispherical Resonator Gyro', '', []],
+  ['HST', 'Hubble Space Telescope', '', []],
   ['HTP', 'High Test Peroxide', 'hydrogen peroxide monopropellant', '', []],
+  ['IAU', 'International Astronomical Union', '', []],
   ['ICBM', 'InterContinental Ballistic Missile', '', ['apollo']],
+  ['ICBM', 'Intercontinental Ballistic Missile', '', []],
+  ['IIN', 'International Identification Number', '', []],
   ['ITU', 'International Telecommunication Union', '', []],
   [
     'J-2',
@@ -64,9 +75,7 @@
   [
     'LOR',
     'Lunar Orbit Rendezvous.',
-    'One of the three potential methods of achieving a lunar landing and safe return. Fly into lunar orbit and send \
-down a specialized lander while the mothership remained in space, then rendezvous upon lifting off from the \
-Moon. LOR was selected as the final one.',
+    'One of the three potential methods of achieving a lunar landing and safe return. Fly into lunar orbit and send down a specialized lander while the mothership remained in space, then rendezvous upon lifting off from the Moon. LOR was selected as the final one.',
     ['apollo'],
   ],
   ['LOX', 'Liquid OXygen', 'Very cold liquid oxygen. A cryogenic propellant.', ['apollo']],
@@ -78,11 +87,14 @@ Moon. LOR was selected as the final one.',
   ['MCC', 'Mission Control Centre', '', []],
   ['MECO', 'Main Engine Cutoff', '', []],
   ['MLP', 'Mobile Launcher Platform', '', ['apollo']],
+  ['MMU', 'manned Manoeuvring Unit', '', []],
   ['MOCR', 'Mission Operations Control Room', '', ['apollo']],
   ['MSR', 'Mars Sample Return', '', []],
   ['MSS', 'Mobile Service Structure', '', ['apollo']],
   ['NASA', 'National Aeronautics and Space Administration', '', []],
+  ['NAVSPASUR', 'Naval Fence or the Naval Space Surveillance', '', []],
   ['NOAA', 'The US National Oceanic and Atmospheric Administration', '', []],
+  ['NOCT', 'Network Operations Control Team at the JPL', '', []],
   [
     'radar',
     'RAdio Detection And Ranging',
@@ -90,23 +102,31 @@ Moon. LOR was selected as the final one.',
     [],
   ],
   ['RCS', 'Reaction Control System', '', ['apollo']],
+  ['RED', 'Resistance Exercise Device', '', []],
   ['RLG', 'Ring Laser Gyroscope', '', []],
   ['RP-1', 'Rocket Propellant-1, Refined Petroleum-1, refined kerosene fuel', '', ['apollo']],
   ['RTLS', 'Return To Launch Site', '', []],
   ['S-IC', 'First stage of Saturn V (pronounced s-one-c)', '', ['apollo']],
   ['S-II', 'Second stage of Saturn V (pronounced s-two)', 'Had five non-restartable J-2 engines.', ['apollo']],
   ['S-IVB', 'Third stage of Saturn V (pronounced s-four-b)', 'Had single restartable J-2 engine.', ['apollo']],
+  ['SAFER', 'Simplified Aid for Extravehicular Activity Rescue', '', []],
   ['Saturn IB', 'Launch vehicle, smaller predecessor of Saturn V', '', ['apollo']],
+  ['SBV', 'Space-Based Visible', '', []],
   ['SIM', 'Scientific Instrument Module', '', ['apollo']],
+  ['SLR', 'Satellite Laser Ranging', '', []],
   ['SM', 'Service Module', '', ['apollo']],
   ['SNR', 'Signal to Noise Ratio', '', []],
   ['SOHO', 'Solar and Heliospheric Observatory', '', []],
   ['SPS', 'Service Propulsion System', '', ['apollo']],
+  ['SSN)', 'Space Surveillance Network', '', []],
   ['TAL', 'Transatlantic Abort Landing', '', []],
   ['TDRS', "NASA's Tracking and Data Relay Satellite System", '', []],
   ['TLI', 'TransLunar Injection', '', ['apollo']],
   ['TT&C', 'Tracking, Telemetry and Command', '', []],
+  ['UHF', 'Ultra High Frequency', '', []],
   ['USAF', 'US Air Force', '', ['apollo']],
+  ['USSTRATCOM', 'US Strategic Command', '', []],
   ['VAB', 'Vehicle Assembly Building', '', ['apollo']],
   ['VfR', 'Verein für Raumschiffahrt', '(Society for Space Travel)', ['apollo']],
+  ['VIS', 'Vibration Isolation System', '', []],
 ]
