--- a/package.json
+++ b/package.json
@@ -97,8 +97,8 @@
     "solar-system"
   ],
   "engines": {
-    "node": ">=12.0.0",
-    "npm": ">=6.0.0"
+    "node": "14.17.0",
+    "npm": "6.14.13"
   },
   "browserslist": [
     ">0.2%",
