Fix alias resolution for TypeScript compiler.
This needs to be synchronized between tsc and tsloader.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    // keep this synchronized with the webpack.common.js#resolve.alias
+    "baseUrl": "./",
+    "paths": {
+      "Data": ["data"]
+    },
+
     "module": "esnext",
     "target": "es6",
     "sourceMap": true,
