--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "clean": "rimraf dist",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
-    "lint:fix": "eslint --fix 'src/**/*.ts' 'src/**/*.tsx'",
+    "lint": "eslint src/**/*.ts src/**/*.tsx",
+    "lint:fix": "eslint --fix src/**/*.ts src/**/*.tsx",
     "start": "webpack serve --open --config webpack.dev.js",
     "test": "jest",
     "prettier": "prettier-package-json --write ./package.json"
