--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
-  "name": "devstronomy-frontend",
+  "name": "@devstronomy/frontend",
+  "version": "0.1.1",
   "description": "This project contains the code-base for the frontend part of Devstronomy project.",
   "license": "MIT",
   "homepage": "https://devstronomy.com",
@@ -11,7 +12,6 @@
   "bugs": {
     "url": "https://github.com/devstronomy/frontend/issues"
   },
-  "version": "0.1.1",
   "scripts": {
     "build": "webpack --config webpack.prod.js --progress",
     "clean": "rimraf dist",
@@ -21,7 +21,8 @@
     "lint:fix": "eslint --fix src/**/*.ts src/**/*.tsx",
     "start": "webpack serve --open --config webpack.dev.js",
     "test": "jest",
-    "prettier": "prettier-package-json --write ./package.json"
+    "prettier": "prettier -c src && prettier-package-json -l ./package.json",
+    "prettier:fix": "prettier -w src && prettier-package-json --write ./package.json"
   },
   "dependencies": {
     "@material-ui/core": "4.11.4",
