More abbreviations; fix dupes and format

--- a/data/rocket-abbr.json5
+++ b/data/rocket-abbr.json5
@@ -1,4 +1,3 @@
-// Entries shape: ['abbreviation', 'short description', 'long description', [tags]]
 [
   ['39A', 'One of the two pads at the Launch Complex 39.', '', ['apollo']],
   ['39B', 'One of the two pads at the Launch Complex 39.', '', ['apollo']],
@@ -15,8 +14,10 @@
   ['CMEs', 'Coronal Mass Ejections', '', []],
   ['CMP', 'Command Module Pilot', '', ['apollo']],
   ['COAS', 'Crew Operated Alignment Sight', '', []],
+  ['COMSAT', 'Communications Satellite Corporation', '', []],
   ['CSM', 'CM + SM (Command Module + Service Module)', '', ['apollo']],
   ['DAP', 'Digital AutoPilot', '', ['apollo']],
+  ['DSG', 'Deep Space Gateway', '', []],
   ['DSN', "NASA's Deep Space Network", '', []],
   ['EASEP', 'Early Apollo Scientific Experiments Package', '', ['apollo']],
   ['EMU', 'Extravehicular Mobility Unit', '', []],
@@ -47,13 +48,22 @@
   ['GPS', 'Global Positioning System', '', []],
   ['GRAVES', 'Grande Reseau Adapte a la Veille Spatial or Radar System Adapted to Space', 'GRAVES radar system', []],
   ['GSO', 'GeoSynchronous Orbit', '', []],
+  ['HALO', 'Habitation and Logistics Outpost', '', []],
   ['HRG', 'Hemispherical Resonator Gyro', '', []],
   ['HST', 'Hubble Space Telescope', '', []],
-  ['HTP', 'High Test Peroxide', 'hydrogen peroxide monopropellant', '', []],
+  ['HTP', 'High Test Peroxide', 'hydrogen peroxide monopropellant', []],
   ['IAU', 'International Astronomical Union', '', []],
   ['ICBM', 'InterContinental Ballistic Missile', '', ['apollo']],
-  ['ICBM', 'Intercontinental Ballistic Missile', '', []],
+  ['ICE', 'International Comet Explorer', '', []],
+  ['ICPS', 'Interim Cryogenic Propulsion Stage', '', []],
   ['IIN', 'International Identification Number', '', []],
+  ['INTELSAT', 'International Telecommunications Satellite Consortium', '', []],
+  [
+    'ISRU',
+    'in situ resource utilization',
+    'collection, processing, storing and use of materials found or manufactured on other astronomical objects (the Moon, Mars, asteroids, etc.)',
+    ['mars'],
+  ],
   ['ITU', 'International Telecommunication Union', '', []],
   [
     'J-2',
@@ -62,6 +72,8 @@
     ['apollo'],
   ],
   ['KSC', 'Kennedy Space Center', '', ['apollo']],
+  ['LAS', 'Launch Abort System', '', []],
+  ['LCRD', 'Laser Communications Relay Demonstration', '', []],
   ['LEM', 'Lunar Excursion Module', 'Initial name for LM.', ['apollo']],
   ['LEO', 'Low Earth Orbit', '', []],
   ['LEOP', 'Launch and Early Orbit Phase', '', []],
@@ -72,6 +84,7 @@
   ['LMAE', 'Lunar Module Ascent Engine', '', []],
   ['LMP', 'Lunar Module Pilot', '', ['apollo']],
   ['LOI', 'Lunar Orbit Insertion', '', ['apollo']],
+  ['LOLA', 'Lunar Orbiter Laser Altimeter', '', []],
   [
     'LOR',
     'Lunar Orbit Rendezvous.',
@@ -82,26 +95,37 @@
   ['LRV', 'Lunar Roving Vehicle', '', ['apollo']],
   ['LSMS', 'Lightweight Surface Manipulation System', '', []],
   ['LUT', 'Large Umbilical Tower', '', ['apollo']],
+  ['LVSA', 'Launch Vehicle Stage Adaptor', 'connects SLS core stage and ICPS', []],
+  ['M2P2', 'Mini-Magnetospheric Plasma Propulsion', '', []],
   ['MAPS', 'Mars Ascent Propulsion System', '', []],
   ['MCC', 'Mission Control Center', '', ['apollo']],
-  ['MCC', 'Mission Control Centre', '', []],
   ['MECO', 'Main Engine Cutoff', '', []],
+  ['MESSENGER spacecraft', 'Mercury Surface, Space Environment, Geochemistry and Ranging', '', []],
   ['MLP', 'Mobile Launcher Platform', '', ['apollo']],
   ['MMU', 'manned Manoeuvring Unit', '', []],
   ['MOCR', 'Mission Operations Control Room', '', ['apollo']],
+  ['MPPF', 'Multi-Payload Processing Facility', 'NASA facility used for spacecraft and payload processing', []],
+  ['MSO', 'Mass Simulator for Orion', '', ['sls']],
   ['MSR', 'Mars Sample Return', '', []],
   ['MSS', 'Mobile Service Structure', '', ['apollo']],
+  ['MXER', 'Momentum-Exchange Electrodynamic Reboost', '', []],
   ['NASA', 'National Aeronautics and Space Administration', '', []],
   ['NAVSPASUR', 'Naval Fence or the Naval Space Surveillance', '', []],
+  ['NEA', 'Near-Earth Asteroid', '', []],
+  ['NEAR/Shoemaker', 'Near Earth Asteroid Rendezvous', '', []],
   ['NOAA', 'The US National Oceanic and Atmospheric Administration', '', []],
   ['NOCT', 'Network Operations Control Team at the JPL', '', []],
+  ['OSA', 'Orion Stage Adapter', '', ['sls']],
+  ['PBAN', 'polybutadiene acrylonitrile', 'binder and partially fuel', []],
+  ['PPE', 'Power and Propulsion Element', '', []],
+  ['PPT', 'Pulsed Plasma Thruster', '', []],
   [
     'radar',
     'RAdio Detection And Ranging',
     'The word "radar" is taken from the initial letters of the phrase "RAdio Detection And Ranging"',
     [],
   ],
-  ['RCS', 'Reaction Control System', '', ['apollo']],
+  ['RCS', 'Reaction Control System', '', []],
   ['RED', 'Resistance Exercise Device', '', []],
   ['RLG', 'Ring Laser Gyroscope', '', []],
   ['RP-1', 'Rocket Propellant-1, Refined Petroleum-1, refined kerosene fuel', '', ['apollo']],
@@ -112,16 +136,20 @@
   ['SAFER', 'Simplified Aid for Extravehicular Activity Rescue', '', []],
   ['Saturn IB', 'Launch vehicle, smaller predecessor of Saturn V', '', ['apollo']],
   ['SBV', 'Space-Based Visible', '', []],
+  ['SELENE', 'SELenological and ENgineering Explorer', '', []],
   ['SIM', 'Scientific Instrument Module', '', ['apollo']],
   ['SLR', 'Satellite Laser Ranging', '', []],
   ['SM', 'Service Module', '', ['apollo']],
   ['SNR', 'Signal to Noise Ratio', '', []],
   ['SOHO', 'Solar and Heliospheric Observatory', '', []],
-  ['SPS', 'Service Propulsion System', '', ['apollo']],
+  ['SPS', 'Service Propulsion System', '', []],
   ['SSN)', 'Space Surveillance Network', '', []],
+  ['STS', 'Space Transportation System', '', []],
   ['TAL', 'Transatlantic Abort Landing', '', []],
   ['TDRS', "NASA's Tracking and Data Relay Satellite System", '', []],
   ['TLI', 'TransLunar Injection', '', ['apollo']],
+  ['TNO', 'Trans-Neptunian Object', '', []],
+  ['TSMU', 'Tail Service Mast Umbilicals', '', []],
   ['TT&C', 'Tracking, Telemetry and Command', '', []],
   ['UHF', 'Ultra High Frequency', '', []],
   ['USAF', 'US Air Force', '', ['apollo']],
@@ -129,4 +157,5 @@
   ['VAB', 'Vehicle Assembly Building', '', ['apollo']],
   ['VfR', 'Verein für Raumschiffahrt', '(Society for Space Travel)', ['apollo']],
   ['VIS', 'Vibration Isolation System', '', []],
+  ['WAVAR', 'water-vapor adsorption reactor', 'extraction of the water from the atmosphere of the Mars', ['mars']],
 ]
