--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js --progress",
     "clean": "rimraf dist",
+    "flush-npm": "rm -rf node_modules && npm install",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "lint": "eslint src/**/*.ts src/**/*.tsx",
@@ -25,69 +26,69 @@
     "prettier:fix": "prettier -w src && prettier-package-json --write ./package.json"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.4",
+    "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "lodash": "4.17.21",
     "polished": "4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.4",
-    "react-router-dom": "5.2.0",
+    "react-redux": "7.2.5",
+    "react-router-dom": "5.3.0",
     "react-router-hash-link": "2.4.3",
     "react-virtualized": "9.22.3",
-    "redux": "4.1.0",
+    "redux": "4.1.1",
     "redux-saga": "1.1.3",
-    "styled-components": "5.3.0"
+    "styled-components": "5.3.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.0.0",
-    "@testing-library/user-event": "13.1.9",
-    "@types/jest": "26.0.23",
-    "@types/lodash": "4.14.170",
-    "@types/node": "15.12.4",
-    "@types/react": "17.0.11",
-    "@types/react-dom": "17.0.8",
-    "@types/react-redux": "7.1.16",
-    "@types/react-router": "5.1.15",
-    "@types/react-router-dom": "5.1.7",
-    "@types/react-router-hash-link": "2.4.0",
-    "@types/react-virtualized": "9.21.11",
-    "@types/styled-components": "5.1.10",
+    "@testing-library/react": "12.1.0",
+    "@testing-library/user-event": "13.2.1",
+    "@types/jest": "27.0.2",
+    "@types/lodash": "4.14.173",
+    "@types/node": "16.9.6",
+    "@types/react": "17.0.24",
+    "@types/react-dom": "17.0.9",
+    "@types/react-redux": "7.1.18",
+    "@types/react-router": "5.1.16",
+    "@types/react-router-dom": "5.3.0",
+    "@types/react-router-hash-link": "2.4.2",
+    "@types/react-virtualized": "9.21.13",
+    "@types/styled-components": "5.1.14",
     "@types/webpack": "5.28.0",
-    "@types/webpack-dev-server": "3.11.4",
-    "@typescript-eslint/eslint-plugin": "4.28.0",
-    "@typescript-eslint/parser": "4.28.0",
+    "@types/webpack-dev-server": "4.1.0",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "babel-eslint": "10.1.0",
-    "babel-plugin-styled-components": "1.12.0",
-    "copy-webpack-plugin": "9.0.0",
-    "css-loader": "5.2.6",
-    "eslint": "7.29.0",
+    "babel-plugin-styled-components": "1.13.2",
+    "copy-webpack-plugin": "9.0.1",
+    "css-loader": "6.3.0",
+    "eslint": "7.32.0",
     "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-jest-dom": "3.9.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jest-dom": "3.9.2",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react": "7.26.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-standard": "4.1.0",
     "gh-pages": "3.2.3",
     "html-webpack-plugin": "5.3.2",
     "import-sort-style-module": "6.0.0",
-    "jest": "27.0.5",
+    "jest": "27.2.1",
     "json5-loader": "4.0.1",
-    "mini-css-extract-plugin": "1.6.0",
-    "prettier": "2.3.1",
+    "mini-css-extract-plugin": "2.3.0",
+    "prettier": "2.4.1",
     "prettier-package-json": "2.6.0",
     "prettier-plugin-import-sort": "0.0.7",
     "rimraf": "3.0.2",
-    "style-loader": "3.0.0",
-    "ts-jest": "27.0.3",
-    "ts-loader": "9.2.3",
-    "typescript": "4.3.4",
-    "webpack": "5.40.0",
-    "webpack-cli": "4.7.2",
-    "webpack-dev-server": "3.11.2",
+    "style-loader": "3.3.0",
+    "ts-jest": "27.0.5",
+    "ts-loader": "9.2.6",
+    "typescript": "4.4.3",
+    "webpack": "5.53.0",
+    "webpack-cli": "4.8.0",
+    "webpack-dev-server": "4.2.1",
     "webpack-merge": "5.8.0"
   },
   "keywords": [
