Major versions bump + related fixes
- Bump all deps.
- Bump node/npm deps.
- Fix Prettier setup (get rid of the workaround).
- New versions need explicit `testEnvironment` set-up.
- Fix routing to the new React Router API.
- Some other trivia.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,24 +6,24 @@
       "Data": ["data"]
     },
 
-    "module": "esnext",
-    "target": "es6",
-    "sourceMap": true,
-    "jsx": "react-jsx",
-    "strict": true,
-    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
+    "jsx": "react-jsx",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
     "noUnusedLocals": true,
-    "skipLibCheck": false,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "experimentalDecorators": true,
-    "noFallthroughCasesInSwitch": true
+    "skipLibCheck": false,
+    "sourceMap": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "target": "es6"
   },
   "include": ["src"]
 }
