--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js --progress",
     "clean": "rimraf dist",
-    "flush-npm": "rm -rf node_modules && npm install",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "flush-npm": "rm -rf node_modules && npm install",
     "lint": "eslint src/**/*.ts src/**/*.tsx",
     "lint:fix": "eslint --fix src/**/*.ts src/**/*.tsx",
     "start": "webpack serve --open --config webpack.dev.js",
@@ -29,66 +29,66 @@
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "lodash": "4.17.21",
-    "polished": "4.1.3",
+    "polished": "4.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.5",
-    "react-router-dom": "5.3.0",
+    "react-redux": "7.2.6",
+    "react-router-dom": "6.2.2",
     "react-router-hash-link": "2.4.3",
     "react-virtualized": "9.22.3",
-    "redux": "4.1.1",
+    "redux": "4.1.2",
     "redux-saga": "1.1.3",
-    "styled-components": "5.3.1"
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.1.0",
-    "@testing-library/user-event": "13.2.1",
-    "@types/jest": "27.0.2",
-    "@types/lodash": "4.14.173",
-    "@types/node": "16.9.6",
-    "@types/react": "17.0.24",
-    "@types/react-dom": "17.0.9",
-    "@types/react-redux": "7.1.18",
-    "@types/react-router": "5.1.16",
-    "@types/react-router-dom": "5.3.0",
-    "@types/react-router-hash-link": "2.4.2",
-    "@types/react-virtualized": "9.21.13",
-    "@types/styled-components": "5.1.14",
+    "@testing-library/jest-dom": "5.16.3",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.4.1",
+    "@types/lodash": "4.14.180",
+    "@types/node": "17.0.23",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
+    "@types/react-redux": "7.1.23",
+    "@types/react-router": "5.1.18",
+    "@types/react-router-dom": "5.3.3",
+    "@types/react-router-hash-link": "2.4.5",
+    "@types/react-virtualized": "9.21.20",
+    "@types/styled-components": "5.1.24",
     "@types/webpack": "5.28.0",
-    "@types/webpack-dev-server": "4.1.0",
-    "@typescript-eslint/eslint-plugin": "4.31.2",
-    "@typescript-eslint/parser": "4.31.2",
+    "@types/webpack-dev-server": "4.7.1",
+    "@typescript-eslint/eslint-plugin": "5.16.0",
+    "@typescript-eslint/parser": "5.16.0",
     "babel-eslint": "10.1.0",
-    "babel-plugin-styled-components": "1.13.2",
-    "copy-webpack-plugin": "9.0.1",
-    "css-loader": "6.3.0",
-    "eslint": "7.32.0",
+    "babel-plugin-styled-components": "2.0.6",
+    "copy-webpack-plugin": "10.2.4",
+    "css-loader": "6.7.1",
+    "eslint": "8.11.0",
     "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jest-dom": "3.9.2",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jest-dom": "4.0.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-react": "7.26.0",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-standard": "4.1.0",
     "gh-pages": "3.2.3",
-    "html-webpack-plugin": "5.3.2",
+    "html-webpack-plugin": "5.5.0",
     "import-sort-style-module": "6.0.0",
-    "jest": "27.2.1",
+    "jest": "27.5.1",
     "json5-loader": "4.0.1",
-    "mini-css-extract-plugin": "2.3.0",
-    "prettier": "2.4.1",
-    "prettier-package-json": "2.6.0",
+    "mini-css-extract-plugin": "2.6.0",
+    "prettier": "2.6.1",
+    "prettier-package-json": "2.6.3",
     "prettier-plugin-import-sort": "0.0.7",
     "rimraf": "3.0.2",
-    "style-loader": "3.3.0",
-    "ts-jest": "27.0.5",
-    "ts-loader": "9.2.6",
-    "typescript": "4.4.3",
-    "webpack": "5.53.0",
-    "webpack-cli": "4.8.0",
-    "webpack-dev-server": "4.2.1",
+    "style-loader": "3.3.1",
+    "ts-jest": "27.1.4",
+    "ts-loader": "9.2.8",
+    "typescript": "4.6.3",
+    "webpack": "5.70.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.7.4",
     "webpack-merge": "5.8.0"
   },
   "keywords": [
@@ -99,8 +99,8 @@
     "solar-system"
   ],
   "engines": {
-    "node": "14.17.0",
-    "npm": "6.14.13"
+    "npm": "8.3.1",
+    "node": "16.14.0"
   },
   "browserslist": [
     ">0.2%",
