--- a/package.json
+++ b/package.json
@@ -99,8 +99,8 @@
     "solar-system"
   ],
   "engines": {
-    "npm": "8.3.1",
-    "node": "16.14.0"
+    "node": "16.14.2",
+    "npm": "8.5.0"
   },
   "browserslist": [
     ">0.2%",
