Switch to "defaults" for "browserslist"
We are using `tsc` which currently ignores `browserslist`. But other
tools can possibly use it, so let's leave the field there.

--- a/package.json
+++ b/package.json
@@ -103,9 +103,6 @@
     "npm": "8.5.0"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    "defaults"
   ]
 }
