Add 'datasets' keyword

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "keywords": [
     "apollo",
     "astronomy",
+    "datasets",
     "planetary-satellites",
     "planets",
     "solar-system"
