Migrate from Material UI v4 to v5
+ provide necessary mapping for the styled-component version. Since the
default Material styling engine is Emotion.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     // keep this synchronized with the webpack.common.js#resolve.alias
     "baseUrl": "./",
     "paths": {
-      "Data": ["data"]
+      "Data": ["data"],
+      "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
     },
 
     "allowSyntheticDefaultImports": true,
