--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "dependencies": {
     "@devstronomy/celestial": "0.4.0-alpha.2",
-    "@material-ui/core": "4.12.4",
-    "@material-ui/icons": "4.11.3",
+    "@mui/icons-material": "5.10.9",
+    "@mui/material": "5.10.11",
+    "@mui/styled-engine-sc": "5.10.6",
+    "@mui/system": "5.10.10",
     "lodash": "4.17.21",
     "polished": "4.2.2",
     "react": "18.2.0",
